# append_data_api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: handler.rs  main.rs  model.rs  utils.rs
src/data/: model.json  reviews.index  reviews.jsonl
