[package]
name = "appent_data_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
indexmap = { version = "2.1", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.2"
